Implemented auth_token and added footer yield

--- a/app/views/cat_rental_requests/new.html.erb
+++ b/app/views/cat_rental_requests/new.html.erb
@@ -35,7 +35,5 @@
 
   <input type="submit">
 
-  <input type = "hidden"
-          name = "authenticity_token"
-          value = "<%= form_authenticity_token %>">
+  <% auth_token %>
 </form>
