--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -57,7 +57,5 @@
   <input type="submit" value="<%= submit_text %>">
 
 
-  <input type = "hidden"
-          name = "authenticity_token"
-          value = "<%= form_authenticity_token %>">
+  <%= auth_token %>
 </form>
