--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -26,3 +26,7 @@
     <%= render "req_tr", req: req %>
   <% end %>
 </table>
+
+<% content_for :footer do %>
+  <p>You are viewing a pretty AMAZING cat!</p>
+<% end %>
